--- a/price-calculator.html
+++ b/price-calculator.html
@@ -186,7 +186,7 @@
 
         <section class="jumbotron text-center">
             <div class="container">
-                <h1 class="jumbotron-heading price">$XX,XXX</h1>
+                <h1 class="jumbotron-heading price" id="finalPrice">$XX,XXX</h1>
                 <p class="lead text-muted"> This price is to be used as a rough guide only and not as a definitive
                     estimate.
                     Voice over talent, music and sound effects can significantly increase overall costs.
