--- a/price-calculator.html
+++ b/price-calculator.html
@@ -43,7 +43,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card mb-4 shadow-sm">
-                                <img onclick="chooseMedium('3D_Anim','3D_styles')" class="cardMedium" id="3D_Anim" src="img/D3_anim.jpg"
+                                <img onclick="chooseMedium('3D_Anim','3D_styles')" class="cardMedium" id="3D_Anim" src="img/priceCalculator/D3_anim.jpg"
                                     alt="3D Animation">
                                 <div class="card-body">
                                     <p class="card-text">3D Animation & VFX</p>
@@ -53,15 +53,16 @@
                         <div class="col-md-4">
                             <div class="card mb-4 shadow-sm">
                                 <img onclick="chooseMedium('MotionGraphics','MG_styles')" class="cardMedium" id="MotionGraphics"
-                                    src="img/Motion.jpg" alt="Motion Graphics">
+                                    src="img/priceCalculator/Motion.jpg" alt="Motion Graphics">
                                 <div class="card-body">
                                     <p class="card-text">Motion Graphics</p>
+                                    
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card mb-4 shadow-sm">
-                                <img onclick="chooseMedium('2D_Anim','2D_styles')" class="cardMedium" id="2D_Anim" src="img/D2_anim.jpg"
+                                <img onclick="chooseMedium('2D_Anim','2D_styles')" class="cardMedium" id="2D_Anim" src="img/priceCalculator/D2_anim.jpg"
                                     alt="2D Animation">
                                 <div class="card-body">
                                     <p class="card-text">2D Animation</p>
@@ -76,7 +77,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img onclick="chooseAnimStyle('cutOut')" id="cutOut" class="cardAnimStyle" src="img/D2_1.jpg" alt="Cut out style">
+                                    <img onclick="chooseAnimStyle('cutOut')" id="cutOut" class="cardAnimStyle" src="img/priceCalculator/D2_1.jpg" alt="Cut out style">
                                     <div class="card-body">
                                         <p class="card-text">Cut out style</p>
                                     </div>
@@ -84,7 +85,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img onclick="chooseAnimStyle('vector2D')" id="vector2D" class="cardAnimStyle" src="img/D2_2.jpg" alt="Rigged, vector based animation">
+                                    <img onclick="chooseAnimStyle('vector2D')" id="vector2D" class="cardAnimStyle" src="img/priceCalculator/D2_2.jpg" alt="Rigged, vector based animation">
                                     <div class="card-body">
                                         <p class="card-text">Rigged, vector based animation</p>
                                     </div>
@@ -92,7 +93,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img onclick="chooseAnimStyle('traditional2D')" id="traditional2D" class="cardAnimStyle" src="img/D2_3.jpg" alt="Traditional animation style">
+                                    <img onclick="chooseAnimStyle('traditional2D')" id="traditional2D" class="cardAnimStyle" src="img/priceCalculator/D2_3.jpg" alt="Traditional animation style">
                                     <div class="card-body">
                                         <p class="card-text">Traditional animation style</p>
                                     </div>
@@ -105,7 +106,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img onclick="chooseAnimStyle('abstractMotion')" id="abstractMotion" class="cardAnimStyle" src="img/M_1.jpg" alt="Abstract 2D - 3D">
+                                    <img onclick="chooseAnimStyle('abstractMotion')" id="abstractMotion" class="cardAnimStyle" src="img/priceCalculator/M_1.jpg" alt="Abstract 2D - 3D">
                                     <div class="card-body">
                                         <p class="card-text">Abstract 2D - 3D</p>
                                     </div>
@@ -113,7 +114,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img onclick="chooseAnimStyle('complex3DMotion')" id="complex3DMotion" class="cardAnimStyle" src="img/M_2.jpg" alt="Complex 3D Scenes">
+                                    <img onclick="chooseAnimStyle('complex3DMotion')" id="complex3DMotion" class="cardAnimStyle" src="img/priceCalculator/M_2.jpg" alt="Complex 3D Scenes">
                                     <div class="card-body">
                                         <p class="card-text">Complex 3D Scenes</p>
                                     </div>
@@ -121,7 +122,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img onclick="chooseAnimStyle('realistic3DMotion')" id="realistic3DMotion" class="cardAnimStyle" src="img/M_3.jpg" alt="Realistic 3D">
+                                    <img onclick="chooseAnimStyle('realistic3DMotion')" id="realistic3DMotion" class="cardAnimStyle" src="img/priceCalculator/M_3.jpg" alt="Realistic 3D">
                                     <div class="card-body">
                                         <p class="card-text">Realistic 3D</p>
                                     </div>
@@ -134,7 +135,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img onclick="chooseAnimStyle('visualisation3D')" id="visualisation3D" class="cardAnimStyle" src="img/D3_1.jpg" alt="3D Visualisation">
+                                    <img onclick="chooseAnimStyle('visualisation3D')" id="visualisation3D" class="cardAnimStyle" src="img/priceCalculator/D3_1.jpg" alt="3D Visualisation">
                                     <div class="card-body">
                                         <p class="card-text">3D Visualisation</p>
                                     </div>
@@ -142,7 +143,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img onclick="chooseAnimStyle('cartoon3D')" id="cartoon3D" class="cardAnimStyle" src="img/D3_2.jpg" alt="3D Cartoon">
+                                    <img onclick="chooseAnimStyle('cartoon3D')" id="cartoon3D" class="cardAnimStyle" src="img/priceCalculator/D3_2.jpg" alt="3D Cartoon">
                                     <div class="card-body">
                                         <p class="card-text">3D Cartoon</p>
                                     </div>
@@ -150,7 +151,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card mb-4 shadow-sm">
-                                    <img onclick="chooseAnimStyle('realistic3dCharacter')" id="realistic3dCharacter" class="cardAnimStyle" src="img/D3_3.jpg" alt="3D Realistic">
+                                    <img onclick="chooseAnimStyle('realistic3dCharacter')" id="realistic3dCharacter" class="cardAnimStyle" src="img/priceCalculator/D3_3.jpg" alt="3D Realistic">
                                     <div class="card-body">
                                         <p class="card-text">Realistic Character Animation</p>
                                     </div>
@@ -186,6 +187,8 @@
 
         <section class="jumbotron text-center">
             <div class="container">
+                <div style="display: none;" id="inform"><span id="secondPrice"></span><span id="secondPrice"></span><span id="secondPrice"></span><span id="secondPrice"></span></div>
+                    
                 <h1 class="jumbotron-heading price" id="finalPrice">$XX,XXX</h1>
                 <p class="lead text-muted"> This price is to be used as a rough guide only and not as a definitive
                     estimate.
